Review Request 12602: Cubes API bug fixes, Jobs icon off-center spin bug

--- a/le-ui/projects/common/assets/sass/_navigation.scss
+++ b/le-ui/projects/common/assets/sass/_navigation.scss
@@ -102,7 +102,7 @@ span.ico-container {
     .ico {
         position: absolute;
         top: 50%;
-        left: 52%;
+        left: 50%;
         mask-repeat: no-repeat;
         -webkit-mask-repeat: no-repeat;
         transform: translateY(-50%) translateX(-50%);
